--- a/bib.bib
+++ b/bib.bib
@@ -206,6 +206,15 @@ volume=23,
 pages={831-867}
 }
 
+@article{Pleasants_frobenius_problem_lattices,
+author={P. A. B. Pleasants and H. Ray and K, Steiglitz},
+title={The {Frobenius} problem on lattices},
+journal={Australas. J. Combin.},
+year=2005,
+volume=32,
+pages={27-45}
+}
+
 @article{Baake20003,
 title = "Diffraction from visible lattice points and kth power free integers ",
 journal = "Discrete Mathematics ",
@@ -518,6 +527,13 @@ pages={2990-3002},
 keywords={Monte Carlo methods;estimation theory;noise;spectral analysis;statistical analysis;Cramer-Rao bound;Monte Carlo results;greatest common divisor;initialization;linear regression problems;missing observations;modified Euclidean algorithm;noise levels;noisy contaminated data set;outliers;period estimator;periodic pulse interval analysis;periodic pulse trains;periodogram approach;point process;three-step algorithm;time of arrival;Additive white noise;Data models;Gaussian noise;Linear regression;Maximum likelihood detection;Maximum likelihood estimation;Nervous system;Noise level;Noise robustness;Signal to noise ratio}, 
 doi={10.1109/78.726812}, 
 ISSN={1053-587X},}
+
+@unpublished{Kodithuwakku_tcomms_2014, 
+author={J. Kodithuwakku and N. Letzepis and R. G. McKilliam and A. Grant}, 
+note={accepted to {IEEE Trans. Comm.}}, 
+title={Decoder-Assisted Timing Synchronization in Multiuser {CDMA} Systems},
+month={Apr.} 
+}
 
 @INPROCEEDINGS{6510040, 
 author={Kodithuwakku, J. and Letzepis, N. and Grant, A. and McKilliam, R.}, 
@@ -2655,8 +2671,6 @@ series = {London Mathematical Society Lecture Note Series},
 number=241  
 }
 
-
-
 @inproceedings{Conway1997_sensual_quadratic_form,
 	author = {J. H. Conway},
 	booktitle  ={The sensual (quadratic) form},
@@ -4605,6 +4619,14 @@ month={May},
 pages={4888-4892}
 }
 
+@unpublished{Quinn_multiple_sparse_noisy_SSP_2014, 
+author={B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam}, 
+note={accepted to {IEEE} Statistical Signal Processing Workshop {(SSP)}}, 
+title={On the periodogram estimators of periods from interleaved sparse, noisy timing data}, 
+year=2014, 
+month={Jul.} 
+}
+
 @INPROCEEDINGS{Quinn_sparse_noisy_SSP_2012, 
 author={B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam}, 
 booktitle={{IEEE} Statistical Signal Processing Workshop {(SSP)}}, 
@@ -4656,7 +4678,7 @@ doi={10.1109/ISIT.2012.6283833},
 ISSN={2157-8095},}
 
 @ARTICLE{McKilliam_error_prob_An2012, 
-author={R. G. McKilliam and R. Subramanian and E. Viterbo I. V. L. Clarkson}, 
+author={R. G. McKilliam and R. Subramanian and E. Viterbo and I. V. L. Clarkson}, 
 journal=ieeetit, 
 title={On the Error Performance of the $A_{n}$ Lattices}, 
 year=2012, 
