--- a/robby.bib
+++ b/robby.bib
@@ -19,6 +19,13 @@
   year = 2014
 }
 
+@unpublished{Kodithuwakku_tcomms_2014,
+  author = {J. Kodithuwakku and N. Letzepis and R. G. McKilliam and A. Grant},
+  note = {accepted to {IEEE Trans. Comm.}},
+  title = {Decoder-Assisted Timing Synchronization in Multiuser {CDMA} Systems},
+  month = {Apr.}
+}
+
 @inproceedings{6510040,
   author = {Kodithuwakku, J. and Letzepis, N. and Grant, A. and McKilliam, R.},
   booktitle = {Communications Theory Workshop (AusCTW), 2013 Australian},
@@ -105,6 +112,14 @@
   pages = {4888-4892}
 }
 
+@unpublished{Quinn_multiple_sparse_noisy_SSP_2014,
+  author = {B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
+  note = {accepted to {IEEE} Statistical Signal Processing Workshop {(SSP)}},
+  title = {On the periodogram estimators of periods from interleaved sparse, noisy timing data},
+  year = 2014,
+  month = {Jul.}
+}
+
 @inproceedings{Quinn_sparse_noisy_SSP_2012,
   author = {B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
   booktitle = {{IEEE} Statistical Signal Processing Workshop {(SSP)}},
@@ -128,7 +143,7 @@
 }
 
 @article{McKilliam_error_prob_An2012,
-  author = {R. G. McKilliam and R. Subramanian and E. Viterbo I. V. L. Clarkson},
+  author = {R. G. McKilliam and R. Subramanian and E. Viterbo and I. V. L. Clarkson},
   journal = ieeetit,
   title = {On the Error Performance of the $A_{n}$ Lattices},
   year = 2012,
