added doi to some papers

--- a/bib.bib
+++ b/bib.bib
@@ -532,7 +532,16 @@ ISSN={1053-587X},}
 author={J. Kodithuwakku and N. Letzepis and R. G. McKilliam and A. Grant}, 
 note={accepted to {IEEE Trans. Comm.}}, 
 title={Decoder-Assisted Timing Synchronization in Multiuser {CDMA} Systems},
-month={Apr.} 
+month={Apr.},
+year=2014
+}
+
+@unpublished{Pollok_mod_crb_2014, 
+author={A. Pollok and R. G. McKilliam}, 
+note={accepted to {IEEE Trans. Comm.}}, 
+title={Modified {Cramer-Rao} Bounds for Continuous-Phase Modulated Signals},
+month={Apr.},
+year=2014 
 }
 
 @INPROCEEDINGS{6510040, 
@@ -553,6 +562,8 @@ volume=28,
 pages={257-270}, 
 year=2012
 }
+
+
 
 @misc{McKilliam_asrp_phase_2012, 
 author = {A. Grant and B. Cowley and D. Haley and A. Barbulescu and G. Lechner and I. Land and R. G. McKilliam and A. Pollok and L. Davis}, 
