--- a/robby.bib
+++ b/robby.bib
@@ -23,7 +23,16 @@
   author = {J. Kodithuwakku and N. Letzepis and R. G. McKilliam and A. Grant},
   note = {accepted to {IEEE Trans. Comm.}},
   title = {Decoder-Assisted Timing Synchronization in Multiuser {CDMA} Systems},
-  month = {Apr.}
+  month = {Apr.},
+  year = 2014
+}
+
+@unpublished{Pollok_mod_crb_2014,
+  author = {A. Pollok and R. G. McKilliam},
+  note = {accepted to {IEEE Trans. Comm.}},
+  title = {Modified {Cramer-Rao} Bounds for Continuous-Phase Modulated Signals},
+  month = {Apr.},
+  year = 2014
 }
 
 @inproceedings{6510040,
