added closest point preprint

--- a/bib.bib
+++ b/bib.bib
@@ -94,6 +94,42 @@ keywords={ Search methods; Sorting/merging; Tree coding;},
 doi={},
 ISSN={0090-6778},}
 
+@article{Djukanovic:2011:PMN:1950994.1951252,
+ author = {S. Djukanovi\'{c} and V. Popovi\'{c} and M. Dakovi\'{c} and L. Stankovi\'{c}},
+ title = {A parametric method for non-stationary interference suppression in direct sequence spread-spectrum systems},
+ journal = {Signal Process.},
+ volume = 91,
+ number = 6,
+ month = jun,
+ year = 2011,
+ issn = {0165-1684},
+ pages = {1425-1431},
+ doi = {10.1016/j.sigpro.2010.09.010},
+ keywords = {Direct sequence spread-spectrum, Filtering, Fourier transform, Interference suppression, Product high-order ambiguity function},
+}
+
+@ARTICLE{Djurovic_haf_cpf_2012, 
+author={I. Djurovi\'{c} and M. Simeunovic and S. Djukanovi\'{c} and P. Wang}, 
+journal=ieeetsp, 
+title={A Hybrid {CPF-HAF} Estimation of Polynomial-Phase Signals: Detailed Statistical Analysis}, 
+year=2012, 
+month={Oct.}, 
+volume=60, 
+number=10, 
+pages={5010-5023}, 
+keywords={Accuracy;Estimation error;Parameter estimation;Signal to noise ratio;polynomials;signal processing;statistical analysis;detailed statistical analysis;high-order ambiguity function;hybrid CPF-HAF estimation;multidimensional PPS;phase differentiation;polynomial-phase signals;product RAF;signal-to-noise-ratio threshold;Polynomial-phase signals;cubic phase function;high-order ambiguity function;multicomponent signals;multidimensional signals;non-Gaussian noise;parameter estimation;}, 
+doi={10.1109/TSP.2012.2205570}, 
+ISSN={1053-587X},}
+
+@ARTICLE{Djurovic_aliasing_2012, 
+author={S. Djukanovi\'{c} and I. Djurovi\'{c}}, 
+journal={Signal Processing}, 
+title={Aliasing detection and resolving in the estimation of polynomial-phase signal parameters}, 
+year=2012, 
+volume=92, 
+pages={235-239}
+}
+
 
 @book{van2009empirical,
   title={Empirical Processes in M-Estimation},
@@ -176,6 +212,41 @@ year=2001,
 month={Mar.}
 }
 
+@ARTICLE{Li_coloured_range_est_case, 
+author={Wenchao Li and Xuezhi Wang and Xinmin Wang and Moran, B.}, 
+journal={Electronics Letters}, 
+title={Resolving phase measurement ambiguity in presence of coloured noise}, 
+year=2013, 
+month={August}, 
+volume=49, 
+number=18, 
+pages={1188-1190}, 
+keywords={estimation theory;least squares approximations;signal processing;Lattice method;ambiguous phase measurement ambiguity;coloured noise;coloured phase measurement noise;integer estimation;least-square estimation structure;multiple signal frequencies;noise whitening procedure;scalar quantities}, 
+doi={10.1049/el.2013.1209}, 
+ISSN={0013-5194},}
+
+@ARTICLE{Li_distance_est_wrapped_phase,
+author={Wenchao Li and Xuezhi Wang and Xinmin Wang and Moran, B.},
+journal=ieeetsp,
+title={Distance Estimation Using Wrapped Phase Measurements in Noise},
+year=2013,
+volume=61,
+number=7,
+pages={1676-1688},
+keywords={distance measurement;lattice theory;maximum likelihood estimation;phase measurement;Chinese reminder theorem;Diophantine equation;closed-form algorithm;distance estimation;distance measurement;lattice theoretic idea;maximum likelihood method;measurement noise;phase ambiguity problem;signal phase measurement;statistical bound;wrapped phase measurement;Educational institutions;Estimation;Lattices;Noise;Noise measurement;Phase measurement;Wavelength measurement;Chinese reminder theory;Lattice theory;least square estimation;phase measurement ambiguity;phase unwrapping},
+doi={10.1109/TSP.2013.2238934},
+ISSN={1053-587X},}
+
+@MISC{asrppressreleasewincomm,
+  author = {{UniSA}},
+  title = {Australian innovators take home international technology award},
+  howpublished = {Press Release},
+  month = {March},
+  year = {2013},
+  note = {\url{http://www.unisa.edu.au/Media-Centre/Releases/Australian-innovators-take-home-international--technology-award/#.U2SGCnWSya6}}
+}
+
+
 @incollection{book_sphere_free_number_theory_1990,
 year=1990,
 isbn={978-0-8176-3481-0},
@@ -227,7 +298,6 @@ doi = "http://dx.doi.org/10.1016/S0012-365X(99)00384-2",
 url = "http://www.sciencedirect.com/science/article/pii/S0012365X99003842",
 author = "M. Baake and R. V. Moody and P. A.B. Pleasants"
 }
-
 
 @Article{sym4040566,
 AUTHOR = {Baake, M. and Grimm, U.},
@@ -328,6 +398,29 @@ keywords = "Information optics",
 keywords = "Phase unwrapping",
 keywords = "Weighted least-squares",
 keywords = "Quality map "
+}
+
+@article{Micciancio_knapsack_hash2007,
+author={D. Micciancio},
+title={Generalized compact knapsacks, cyclic lattices, and efficient one-way functions},
+journal={Computational Complexity}, 
+volume=16,
+number=4,
+pages={365-411}, 
+month={Dec.},
+year=2007
+}
+
+@INPROCEEDINGS{Peikert_hash_functions2006,
+author={C. Peikert and A. Rosen},
+title={Efficient collision-resistant hashing from worst-case assumptions on cyclic
+lattices},
+booktitle={TCC}, 
+volume={3876 of LNCS}, 
+pages={145-166},
+publisher={Springer},
+month={Mar.}, 
+year=2006
 }
 
 @INPROCEEDINGS{6622758, 
@@ -536,12 +629,18 @@ month={Apr.},
 year=2014
 }
 
-@unpublished{Pollok_mod_crb_2014, 
+@ARTICLE{Pollok_mckilliam_crb_cpm_2013, 
 author={A. Pollok and R. G. McKilliam}, 
-note={accepted to {IEEE Trans. Comm.}}, 
-title={Modified {Cramer-Rao} Bounds for Continuous-Phase Modulated Signals},
-month={Apr.},
-year=2014 
+journal=ieeetcom, 
+title={Modified {Cram\'{e}r-Rao} Bounds for Continuous-Phase Modulated Signals}, 
+year=2014, 
+month={May}, 
+volume=62, 
+number=5, 
+pages={1681-1690}, 
+keywords={Accuracy;Estimation;Modulation;Noise;Polynomials;Satellites;Vectors;Continuous phase modulation;Craméer-Rao bound;channel estimation}, 
+doi={10.1109/TCOMM.2014.030814.130804}, 
+ISSN={0090-6778}
 }
 
 @INPROCEEDINGS{6510040, 
@@ -805,6 +904,22 @@ keywords={Gaussian channel;capacity;finite number of input levels;channel capaci
 doi={10.1109/18.59937}, 
 ISSN={0018-9448},}
 
+@unpublished{McKilliam_closest_point_lattice_first_kind_2014, 
+author={R. G. McKilliam and A. Grant and I. V. L. Clarkson}, 
+note={under review {SIAM J. Discrete Math.}}, 
+title={Finding a closest point in a lattice of Voronoi's first kind}, 
+year=2014,  
+}
+
+@inproceedings{Micciancio_geom_lat_crypto_2012,
+author={D. Micciancio},
+title={The Geometry of Lattice Cryptography},
+booktitle={Foundations of Security Analysis and Design},
+month={Aug.},
+year=2012
+}
+
+
 @ARTICLE{Shalvi_iterativeslicer_2009, 
 author={N. Sommer and M. Feder and O. Shalvi}, 
 journal={{SIAM J. Discrete Math.}}, 
@@ -883,7 +998,6 @@ number=4,
 pages={381-391}
 }
 
-
 @book{amemiya1985advanced,
   title={Advanced econometrics},
   author={T. Amemiya},
@@ -895,21 +1009,7 @@ pages={381-391}
  author = {M. Ajtai},
  title = {Generating hard instances of lattice problems},
  journal = {in {Proc.} 28th {ACM} {Symposium} on {Theory} of {Computing}},
- year = {1996},
- month = {May},
- isbn = {0-89791-785-5},
- pages = {99-108},
- location = {Philadelphia, Pennsylvania},
- doi = {http://doi.acm.org/10.1145/237814.237838},
- publisher = {ACM},
- address = {New York, NY, USA},
- }
-
-@ARTICLE{AjtaiGeneratingHardInstancesOfLatticeProblems1996,
- author = {M. Ajtai},
- title = {Generating hard instances of lattice problems},
- journal = {in {Proc.} 28th {ACM} {Symposium} on {Theory} of {Computing}},
- year = {1996},
+ year = 1996,
  month = {May},
  isbn = {0-89791-785-5},
  pages = {99-108},
@@ -1591,10 +1691,62 @@ year=1996
 	noise,white noise}
 }
 
-@article{Caley_PTE_Gaussian_Ints_2010,
+@incollection{Agrewal_public_key_lattice_encryption_2010,
+author={S. Agrawal and D. Boneh and X. Boyen},
+title={Efficient lattice (h)ibe in the standard model},
+editor={H. Gilbert},
+booktitle= {Advances in Cryptology}, 
+volume=6110,
+series={Lecture Notes in Computer Science}, 
+pages={553-572}, 
+publisher={Springer},
+adress={Berlin/Heidelberg}, 
+year=2010
+}
+
+@article{Larsson_massive_MIMO_commsmag_2014,
+author={E. G. Larsson and F. Tufvesson and O. Edfors and T. L. Marzetta}, 
+title={Massive {MIMO} for Next Generation Wireless Systems}, 
+journal={IEEE Commun. Mag.}, 
+volume=52, 
+number=2, 
+pages={186-195}, 
+month={Feb.}, 
+year=2014
+}
+
+@article{Rusek_massive_MIMO_sig_proc_mag_2013,
+author={F. Rusek and D. Persson and B. K. Lau and E. G. Larsson and T. L. Marzetta and O. Edfors and F. Tufvesson}, 
+title={Scaling up {MIMO}: {Opportunities} and Challenges with Very Large Arrays}, 
+journal={IEEE Signal Proces. Mag.}, 
+volume=30, 
+number=1, 
+pages={40-46}, 
+month={Jan.},
+year=2013
+}
+
+@inproceedings{Gentry_trapdoors_2008,
+author={C. Gentry and C. Peikert and V. Vaikuntanathan},
+title={Trapdoors for hard lattices and new cryptographic constructions},
+booktitle={ACM Symposium on Theory of Computing}, 
+pages={197-206},
+month={May},
+year=2008
+}
+
+@unpublished{Gastpar_shortest_vector_2014,
+author={S. Sahraei and M. C. Gastpar},
+title={New Shortest Lattice Vector Problems of Polynomial Complexity},
+note={http://arxiv.org/abs/1404.0564v1},
+year={2014},
+month={Apr.}
+}
+
+@unpublished{Caley_PTE_Gaussian_Ints_2010,
 author={T. Caley},
 title={The {Prouhet-Tarry-Escott problem for Gaussian} integers},
-url={http://arxiv.org/abs/1011.1262v2},
+note={http://arxiv.org/abs/1011.1262v2},
 year={2010},
 month={Nov.}
 }
@@ -2991,6 +3143,29 @@ publisher=wiley
   timestamp = {2008.06.09}
 }
 
+@ARTICLE{Damen_lattice_equalisation_2003, 
+author={M.-O. Damen and H. El-Gamal and G. Caire}, 
+journal=ieeetit, 
+title={On maximum-likelihood detection and the search for the closest lattice point}, 
+year=2003, 
+month={Oct.}, 
+volume=49, 
+number=10, 
+pages={2389-2402}, 
+keywords={Gaussian channels;MIMO systems;computational complexity;maximum likelihood decoding;maximum likelihood detection;search problems;Gaussian multiple-input multiple-output linear channels;MIMO;ML decoders;ML decoding;Pohst enumeration strategy;Schnorr-Euchner strategy;Viterbo-Boutros sphere decoder;closest lattice point;complexity;computational complexity;maximum-likelihood decoding;maximum-likelihood detection;number-theoretic tools;preprocessing algorithms;sphere decoders;stack sequential decoding algorithm;Amplitude modulation;Computational complexity;Computational modeling;Detectors;Feedback;Lattices;Linearity;MIMO;Maximum likelihood decoding;Maximum likelihood detection}, 
+doi={10.1109/TIT.2003.817444}, 
+ISSN={0018-9448},}
+
+@article{Nazer_compute_and_forward_2011,
+author={B. Nazer and M. C. Gastpar},
+title={Compute-and-Forward: Harnessing Interference Through Structured Codes}, 
+journal=ieeetit, 
+volume=57, 
+number=10, 
+pages={6463-6486}, 
+year=2011
+}
+
 @ARTICLE{El2004,
   author = {H. {El Gamal} and G. Caire and M. O. Damen},
   title = {Lattice coding and decoding achieve the optimal diversity-multiplexing
@@ -3029,7 +3204,7 @@ volume = {39},
   }
 
 @ARTICLE{Erex2004_lattice_decoding,
-title={Achieving {$1/2 \log(1+SNR)$} on the {AWGN} channel with lattice encoding and decoding},
+title={Achieving {$1/2 \log(1+\text{SNR})$} on the {AWGN} channel with lattice encoding and decoding},
 author={U. Erez and R. Zamir},
 journal=ieeetit,
 year=2004,
@@ -5858,7 +6033,7 @@ author={R. G. McKilliam and B. G. Quinn and  I. V. L. Clarkson and B. Moran and 
 journal=ieeetsp,
 title={Polynomial Phase Estimation by Least Squares Phase Unwrapping}, 
 year=2014, 
-month={April}, 
+month=apr, 
 volume=62, 
 number=8, 
 pages={1962-1975}, 
@@ -6399,7 +6574,7 @@ number=2,
 }
 
 @ARTICLE{Wubben_near_ML_lat_red_MIMO_2004,
-  author = {D. Wübben and R. Böhnke and V. Kühn and K.-D. Kammeyer},
+  author = {D. W\"{u}bben and R. B\"{o}hnke and V. K\"{u}hn and K.-D. Kammeyer},
   title = {Near-maximum-likelihood detection of MIMO systems using MMSE-based lattice-reduction},
   journal = procicomms,
   year = 2004,
