--- a/robby.bib
+++ b/robby.bib
@@ -19,12 +19,17 @@
   year = 2014
 }
 
-@unpublished{Kodithuwakku_tcomms_2014,
+@article{Kodithuwakku_tcomms_2014,
   author = {J. Kodithuwakku and N. Letzepis and R. G. McKilliam and A. Grant},
-  note = {accepted to {IEEE Trans. Comm.}},
+  journal = ieeetom,
   title = {Decoder-Assisted Timing Synchronization in Multiuser {CDMA} Systems},
-  month = {Apr.},
-  year = 2014
+  volume = 62,
+  number = 5,
+  pages = {2061-2071},
+  month = {Jun.},
+  year = 2014,
+  doi = {10.1109/TCOMM.2014.2316265},
+  issn = {0090-6778}
 }
 
 @article{Pollok_mckilliam_crb_cpm_2013,
@@ -69,7 +74,7 @@
 @unpublished{McKilliam_closest_point_lattice_first_kind_2014,
   author = {R. G. McKilliam and A. Grant and I. V. L. Clarkson},
   note = {under review {SIAM J. Discrete Math.}},
-  title = {Finding a closest point in a lattice of Voronoi's first kind},
+  title = {Finding a closest point in a lattice of {Voronoi's} first kind},
   year = 2014
 }
 
@@ -126,12 +131,16 @@
 }
 
 @inproceedings{McKilliam_leastsqPSKnoncoICASSP_2012,
-  author = {R. G. McKilliam and A. Pollok and B. Cowley and I. V. L. Clarkson and B. Quinn},
+  author = {McKilliam, R. G. and Pollok, A. and Cowley, B. and Clarkson, I. V. L. and Quinn, B. G.},
+  booktitle = procicassp,
   title = {Noncoherent least squares estimators of carrier phase and amplitude},
-  booktitle = {{IEEE} Internat. Conf. Acoust. Spe. Sig. Process.},
   year = 2013,
-  month = {May},
-  pages = {4888-4892}
+  pages = {4888-4892},
+  month = may,
+  address = {Vancouver},
+  keywords = {Noncoherent detection;asymptotic statistics;phase shift keying},
+  doi = {10.1109/ICASSP.2013.6638590},
+  issn = {1520-6149}
 }
 
 @unpublished{Quinn_multiple_sparse_noisy_SSP_2014,
