--- a/robby.bib
+++ b/robby.bib
@@ -19,12 +19,17 @@
   year = 2014
 }
 
-@unpublished{Kodithuwakku_tcomms_2014,
+@article{Kodithuwakku_tcomms_2014,
   author = {J. Kodithuwakku and N. Letzepis and R. G. McKilliam and A. Grant},
-  note = {accepted to {IEEE Trans. Comm.}},
+  journal = ieeetom,
   title = {Decoder-Assisted Timing Synchronization in Multiuser {CDMA} Systems},
-  month = {Apr.},
-  year = 2014
+  volume = 62,
+  number = 5,
+  pages = {2061-2071},
+  month = {Jun.},
+  year = 2014,
+  doi = {10.1109/TCOMM.2014.2316265},
+  issn = {0090-6778}
 }
 
 @article{Pollok_mckilliam_crb_cpm_2013,
@@ -69,7 +74,7 @@
 @unpublished{McKilliam_closest_point_lattice_first_kind_2014,
   author = {R. G. McKilliam and A. Grant and I. V. L. Clarkson},
   note = {under review {SIAM J. Discrete Math.}},
-  title = {Finding a closest point in a lattice of Voronoi's first kind},
+  title = {Finding a closest point in a lattice of {Voronoi's} first kind},
   year = 2014
 }
 
@@ -103,12 +108,15 @@
   doi = {10.1109/TSP.2012.2186444}
 }
 
-@unpublished{McKilliam_leastsqPSKpilotsdata_2012,
+@article{McKilliam_leastsqPSKpilotsdata_2012,
   author = {R. G. McKilliam and A. Pollok and B. Cowley and V. Clarkson and B. Quinn},
   title = {Carrier phase and amplitude estimation for phase shift keying using pilots and data},
-  note = {submitted to IEEE Transactions on Signal Processing, preprint available http://arxiv.org/abs/1301.1760},
-  year = 2013,
-  month = {Jan.}
+  journal = ieeetsp,
+  volume = 61,
+  number = 15,
+  pages = {3976-3989},
+  year = 2014,
+  month = {Aug.}
 }
 
 @article{McKilliam_time_offset_pilots_data_2013,
@@ -126,12 +134,16 @@
 }
 
 @inproceedings{McKilliam_leastsqPSKnoncoICASSP_2012,
-  author = {R. G. McKilliam and A. Pollok and B. Cowley and I. V. L. Clarkson and B. Quinn},
+  author = {McKilliam, R. G. and Pollok, A. and Cowley, B. and Clarkson, I. V. L. and Quinn, B. G.},
+  booktitle = procicassp,
   title = {Noncoherent least squares estimators of carrier phase and amplitude},
-  booktitle = {{IEEE} Internat. Conf. Acoust. Spe. Sig. Process.},
   year = 2013,
-  month = {May},
-  pages = {4888-4892}
+  pages = {4888-4892},
+  month = may,
+  address = {Vancouver},
+  keywords = {Noncoherent detection;asymptotic statistics;phase shift keying},
+  doi = {10.1109/ICASSP.2013.6638590},
+  issn = {1520-6149}
 }
 
 @unpublished{Quinn_multiple_sparse_noisy_SSP_2014,
@@ -196,33 +208,29 @@
   issn = {1520-6149}
 }
 
-@article{McKilliam2007,
+@inproceedings{McKilliam2007,
   author = {R. G. McKilliam and I. V. L. Clarkson},
   title = {Maximum-likelihood period estimation from sparse, noisy timing data},
-  journal = procicassp,
+  booktitle = procicassp,
   year = 2008,
   pages = {3697-3700},
   month = {Mar.},
-  owner = {robertm},
-  timestamp = {2008.02.28},
+  address = {Las Vegas, NV, USA},
   issn = {1520-6149},
   isbn = {978-1-4244-1483-3},
   doi = {10.1109/TIT.2008.928280}
 }
 
-@article{McKilliamLinearTimeBlockPSK2009,
+@inproceedings{McKilliamLinearTimeBlockPSK2009,
   title = {Linear-time block noncoherent detection of {PSK}},
   author = {R. G. McKilliam and I. V. L. Clarkson and D. J. Ryan and I. B. Collings},
-  journal = procicassp,
-  year = {2009},
+  booktitle = procicassp,
+  year = 2009,
   month = {Apr.},
-  volume = {},
-  number = {},
+  address = {Taipei, Taiwan},
   pages = {2465-2468},
-  abstract = {We propose a new algorithm for noncoherent sequence detection of M-ary phase-shift-keying (M-PSK) symbols transmitted over a block fading channel. The algorithm is of complexity O(T), where T is the sequence length, and is therefore computationally superior to existing maximum-likelihood (ML) detectors of complexity O(T logT). Our detector is based on a new approximation we propose to the noncoherent ML function. We show that by using this close approximation, the detection problem reduces to a nearest lattice point problem for the lattice An*, from which we derive our O(T) approach. Simulation results are provided that show the difference in bit error rate is negligibly small for a wide range of signal-to-noise ratios.},
   doi = {10.1109/ICASSP.2009.4960121},
-  issn = {1520-6149},
-  url = {http://www.itee.uq.edu.au/~robertm/papers/ICASSP_SNPE.pdf}
+  issn = {1520-6149}
 }
 
 @article{McKilliam2009IndentifiabliltyAliasingPolyphase,
